# quiz-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  docker-compose.yaml  justfile  pyproject.toml  ruff.toml
.github/workflows/: ci-frontend.yml  ci-go.yml  ci-python.yml  deploy-prod.yml
apps/auth/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
apps/auth/alembic/: env.py
apps/auth/alembic/versions/: 4fb1149f4b8a_make_refresh_token_expiration_timestamptz.py  da132227e5a8_init_auth_schema.py
apps/auth/backend/: main.py
apps/auth/backend/alembic/: env.py
apps/auth/backend/alembic/versions/: da132227e5a8_init_auth_schema.py  fd4e6107db3a_init.py
apps/auth/backend/api/: auth.py  internal.py  users.py
apps/auth/backend/core/: config.py  database.py  dependencies.py
apps/auth/backend/models/: token.py  users.py
apps/auth/backend/repositories/: refresh_token_repository.py  role_repository.py  user_repository.py
apps/auth/backend/services/: auth_service.py  user_service.py
apps/auth/backend/utils/: security.py
apps/auth/docker/: app-entrypoint.sh
apps/auth/openapi/: openapi.json
apps/auth/src/quiz_auth/: main.py
apps/auth/src/quiz_auth/api/: auth.py  internal.py  users.py
apps/auth/src/quiz_auth/core/: config.py  database.py  dependencies.py
apps/auth/src/quiz_auth/models/: token.py  users.py
apps/auth/src/quiz_auth/openapi/: export.py
apps/auth/src/quiz_auth/repositories/: refresh_token_repository.py  role_repository.py  user_repository.py
apps/auth/src/quiz_auth/services/: auth_service.py  user_service.py
apps/auth/src/quiz_auth/utils/: security.py
apps/auth/tests/: conftest.py  test_api_auth.py  test_repositories_user_repository.py  test_services_user_service.py  test_utils_security.py
apps/frontend/: .dockerignore  Dockerfile  deno.json  eslint.config.mjs  index.html  justfile  nuxt.config.ts  package.json  prettier.config.mjs  vite.config.ts
apps/frontend-nuxt/: Dockerfile  eslint.config.mjs  nuxt.config.ts  package.json
apps/frontend-nuxt/app/: app.vue
apps/frontend-nuxt/app/composables/: useThemeMode.ts
apps/frontend-nuxt/app/constants/: navigation.ts
apps/frontend-nuxt/app/layouts/: dashboard.vue  default.vue  game.vue
apps/frontend-nuxt/app/pages/: game.vue  host.vue  index.vue  login.vue  register.vue
apps/frontend-nuxt/app/plugins/: primevue.client.ts
apps/frontend-nuxt/app/stores/: auth.ts  gameSession.ts
apps/frontend-nuxt/app/theme/: mode.ts
apps/frontend-nuxt/app/types/: management.ts  session-ws.ts
apps/frontend/app/: app.vue
apps/frontend/app/composables/: useThemeMode.ts
apps/frontend/app/constants/: navigation.ts
apps/frontend/app/layouts/: dashboard.vue  default.vue  game.vue
apps/frontend/app/middleware/: auth.ts  guest.ts
apps/frontend/app/pages/: game.vue  host.vue  index.vue  login.vue  register.vue
apps/frontend/app/plugins/: theme-init.client.ts
apps/frontend/app/stores/: gameSession.ts
apps/frontend/app/theme/: mode.ts  preset.ts  primevue-options.ts
apps/frontend/app/types/: auth.ts  quiz-editor.ts  session-ws.ts
apps/frontend/docker/: nginx.conf
apps/frontend/server/routes/: readyz.get.ts
apps/frontend/src/: App.vue  main.ts  style.css  theme.ts
apps/frontend/src/api/: auth.ts  quiz.ts
apps/frontend/src/layouts/: DashboardLayout.vue  DefaultLayout.vue  GameLayout.vue  dashboardNavigation.ts
apps/frontend/src/router/: index.ts
apps/frontend/src/stores/: auth.ts
apps/frontend/src/styles/: base.css  layout.css  tokens.css
apps/frontend/src/types/: auth.ts  index.ts  management.ts  quiz-editor.ts  quiz.ts  theme.ts
apps/frontend/src/views/: Home.vue  Login.vue  Register.vue
apps/management/: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
apps/management/alembic/: env.py
apps/management/alembic/versions/: 230227e69a40_align_game_session_schema_with_runtime_.py  9b7df0f2c1aa_fix_game_session_status_type.py  c37da42cf767_init_management_schema.py
apps/management/backend/models/: question.py  quiz.py  session.py
apps/management/backend/repositories/: question_repository.py  quiz_repository.py  session_repositories.py
apps/management/docker/: app-entrypoint.sh  healthcheck.py
apps/management/models/: question.py  quizz.py  session.py
apps/management/openapi/: openapi.json
apps/management/src/quiz_management/: main.py
apps/management/src/quiz_management/api/: internal.py  question.py  quiz.py  session.py
apps/management/src/quiz_management/core/: config.py  database.py  dependencies.py  exceptions.py
apps/management/src/quiz_management/models/: question.py  quiz.py  session.py
apps/management/src/quiz_management/openapi/: export.py
apps/management/src/quiz_management/repositories/: question_repository.py  quiz_repository.py  session_repositories.py
apps/management/src/quiz_management/services/: question.py  quiestion.py  quiz.py  session.py  session_client.py
apps/management/tests/: conftest.py  test_repositories_quiz_repository.py  test_services_question_service.py  test_services_quiz_service.py  test_services_session_service.py
apps/session/: .dockerignore  .golang-ci.yml  Dockerfile  README.md  go.mod  go.sum  justfile
apps/session/cmd/session-service/: main.go
apps/session/internal/app/: app.go
apps/session/internal/config/: config.go
apps/session/internal/domain/: answer.go  errors.go  events.go  leaderboard.go  participant.go  quiz.go  scoring.go  session.go
apps/session/internal/logger/: logger.go
apps/session/internal/models/: quiz.go  session.go
docs/: commands.md  development-workflow.md  local-stack.md
infra/nginx/: Dockerfile  nginx.conf
(+110 files in other folders)
