[project]
name = "quiz-platform"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/auth", "apps/management"]

[dependency-groups]
dev = [
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15.8",
]

[tool.ruff]
src = ["apps/auth/src", "apps/management/src"]
line-length = 100
target-version = "py314"
force-exclude = true
extend-exclude = [
    "apps/frontend",
    "apps/*/alembic/versions/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "C90"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"apps/*/tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
exclude = ["apps/*/alembic/versions/*.py"]

[tool.pytest]
minversion = "9.0"
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "apps/auth/tests",
    "apps/management/tests",
]
pythonpath = [
    "apps/auth/src",
    "apps/management/src",
]
