[project]
name = "quiz-auth"
version = "0.1.0"
description = "Auth microservice for quiz app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "sqlalchemy>=2.0",
    "alembic>=1.16",
    "pydantic[email]>=2.12",
    "pyjwt>=2.12",
    "sqlmodel>=0.0.37",
    "pydantic-settings>=2.13.1",
    "passlib>=1.7.4",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.2",
    "bcrypt>=5.0.0",
    "pwdlib[argon2]>=0.3.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiz_auth"]

[tool.pytest]
testpaths = ["tests"]
addopts = ["-ra"]
pythonpath = ["src"]
