[project]
name = "quiz-auth"
version = "0.1.0"
description = "Auth microservice for quiz app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12",
    "pydantic-settings>=2.13.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiz_auth"]

[tool.pytest]
minversion = "9.0"
addopts = [
    "-ra",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
