[project]
name = "quiz-management"
version = "0.1.0"
description = "Management microservice for quiz app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135",
    "greenlet>=3.3.2",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12",
    "pydantic-settings>=2.13.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.37",
    "uuid7>=0.1.0",
    "uvicorn[standard]>=0.42",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiz_management"]
